--- a/appTaskSolve/package.json
+++ b/appTaskSolve/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "recharts": "^3.4.1",
     "styled-components": "^6.1.19",
     "yup": "^1.7.1"
   },
